# wiki_speedrun

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/: benchmark_problems.json  benchmark_problems.json.bak  benchmark_results.json  benchmark_results.jsonl  benchmark_results.jsonl.bak  openrouter_models.json  openrouter_test_results.json  smoke_test_2026-01-24.txt
scripts/: analyze_models.py  comprehensive_benchmark.py  play.py  quick_benchmark.py  save_charts.py  smoke_test.py  test_epstein.py  test_llm_models.py  test_openrouter.py  validate_data.py
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  embedding.py  hf_embedding.py  human.py  live_oracle.py  llm.py  oracle.py  random_agent.py
src/benchmark/: __init__.py
src/data/: __init__.py  loader.py
src/game/: __init__.py  engine.py  state.py
src/graph/: __init__.py
src/heuristics/: __init__.py
src/wikipedia/: __init__.py  scraper.py
tests/: __init__.py  conftest.py  test_data_loader.py
ui/: __init__.py  app.py  flask_app.py
ui/components/: charts.py  data_loader.py  wikipedia_viewer.py
ui/pages/: 1_Dashboard.py  2_Play.py
